<resources>
    <string name="app_name">ChatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="already_have_account">Already have Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="username">UserName</string>
    <string name="click_for_sign_up">Click for Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>