<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/signUpLayout"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_whatsapp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_textfied"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_textfied"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_textfied"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/linear_textfied"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/already_have_account" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:textSize="12sp"
            android:text="@string/sign_up"
            app:cornerRadius="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="@string/google"
                android:textSize="12sp"
                android:textColor="#000000"
                app:cornerRadius="6dp" />

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="15dp"
                android:textSize="12sp"
                android:text="@string/facebook"
                app:cornerRadius="6dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_signUpPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_with_phone"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>